## Process this file with automake to produce Makefile.in

filterdir = $(datadir)/massfind/filter
commondir = $(top_srcdir)/src/common

EXTRA_DIST = fil_euclidian.c fil_euclidian.h fil_boostldm.c fil_boostldm.h fil_qaldm.c fil_qaldm.h fil_visual.c fil_visual.h

foodir = $(libdir)
foo_DATA = libfil_euclidian.so libfil_boostldm.so libfil_qaldm.so libfil_visual.so
